[tool.poetry]
name = "expiring-lru-cache"
version = "0.1.0"
description = ""
authors = ["Bart Smeets <bart@dataroots.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
flake8-docstrings = "^1.6.0"
flake8-annotations = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"