[tool.poetry]
name = "expiring-lru-cache"
version = "0.1.0"
description = "LRU caching with expiration period."
authors = ["Bart Smeets <bart@dataroots.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
mkdocs = "^1.3.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
