[tool.poetry]
name = "expiring-lru-cache"
version = "0.0.0-dev"  # dynamically set in CI
description = "LRU caching with expiration period."
authors = ["Bart Smeets <bart@dataroots.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
mike = "^1.1.2"
mkdocs = "^1.3.1"
mkdocs-material = "^8.3.9"
mkdocs-autorefs = "^0.4.1"
mkdocs-coverage = "^0.2.5"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"

# Devtools not in environment, but used in `pre-commit`
[tool.black]
include = "(expiring_lru_cache/|tests/)"

[tool.mypy]
files = ["expiring_lru_cache", "tests"]
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.isort]
skip_glob = ["docs/*"]
profile = "black"
